--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
   $(function() {
     AV.init({
       appId: "qQUBeJBvjYjFHvIkdkaYN5Qv-gzGzoHsz",
-      appKey: "NFxqaaPRETuOjUWiTNdYA5YN"
+      appKey: "NFxqaaPRETuOjUWiTNdYA5YN",
+      serverURL: "https://bilityleu.github.io/"
       });
-    //serverURL: "localhost"
     var name='Counter';
     var Counter = AV.Object.extend(name);
     showCount(Counter);
