--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     AV.init({
       appId: "qQUBeJBvjYjFHvIkdkaYN5Qv-gzGzoHsz",
       appKey: "NFxqaaPRETuOjUWiTNdYA5YN",
-      serverURL: "https://bilityleu.github.io/"
+      serverURL: "https://qqubejbv.lc-cn-n1-shared.com"
       });
     var name='Counter';
     var Counter = AV.Object.extend(name);
