--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <script src="//code.bdstatic.com/npm/leancloud-storage@4.12.0/dist/av-min.js"></script>
 <script>  
   function showCount(Counter){
-    var query = new AV.Query(name);
+    var query = new AV.Query('counter');
     query.equalTo('createdAt', '2021-11-11');
     query.first().then((today_counter) => {
       console.log(today_counter);
@@ -28,8 +28,7 @@
       appKey: "NFxqaaPRETuOjUWiTNdYA5YN",
       serverURL: "https://qqubejbv.lc-cn-n1-shared.com"
       });
-    var name='Counter';
-    var Counter = AV.Object.extend(name);
+    var Counter = AV.Object.extend('counter');
     showCount(Counter);
   });
 </script>
