--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
       var total_counter = 0;
       if(counters){
         for (let counter of counters){
-          total_counter += counter.attributes.count
+          total_counter += counter.attributes.count;
         }
       }
-      document.getElementById('today_counter').innerText = total_counter;
+      document.getElementById('total_counter').innerText = total_counter;
     });
   } 
   
